# rosetta

./: .gitignore  CHANGELOG.md  LICENSE  default.nix  rosetta.cabal
.github/workflows/: cabal.yaml  stack-ci.yaml
src/: Rosetta.hs  Types.hs
