cabal-version:      2.2
name:               rosetta
version:            1.0.0
synopsis:           Haskell types for the Coinbase Rosetta API.
description:        Haskell types for the Coinbase Rosetta API.
license:            BSD-3-Clause
license-file:       LICENSE
author:             LindaOrtega
maintainer:         linda.ortega2013@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Types
  build-depends:
    , aeson  >=0.11.3.0 && <1.5
    , base   >=4.11     && <5
    , text   >=1.2

  hs-source-dirs:   src
  default-language: Haskell2010
