cabal-version:      2.2
name:               rosetta
version:            1.0.1
synopsis:           Haskell types for the Rosetta API.
description:        Haskell types for the Rosetta API.
license:            BSD-3-Clause
license-file:       LICENSE
author:             LindaOrtega
maintainer:         linda.ortega2013@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
      -Wall
      -Wcompat
      -Wpartial-fields
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Widentities

  exposed-modules:  Rosetta
  build-depends:
    , aeson   >=0.11.3.0 && <1.5
    , base    >=4.11     && <5
    , deepseq >=1.4
    , text    >=1.2
